[package]
name = "SudokuSolver"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
egui_extras = "0.30.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
clipboard = "0.5.0"
